kubernetes/infrastructure/vpn/netbird/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbird
  labels:
    app.kubernetes.io/name: netbird
    app.kubernetes.io/component: vpn-mesh
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
