kubernetes/infrastructure/vpn/netbird/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: netbird-grpc
  namespace: netbird
  labels:
    app.kubernetes.io/name: netbird
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - netbird.timourhomelab.org
  rules:
    - matches:
        - headers:
            - name: Content-Type
              value: application/grpc
          method:
            service: management.ManagementService
      backendRefs:
        - name: management
          port: 80
    - matches:
        - headers:
            - name: Content-Type
              value: application/grpc
          method:
            service: signalexchange.SignalExchange
      backendRefs:
        - name: signal
          port: 80
