kubernetes/infrastructure/vpn/netbird/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-http
  namespace: netbird
  labels:
    app.kubernetes.io/name: netbird
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - netbird.timourhomelab.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dashboard
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /relay
      backendRefs:
        - name: relay
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: management
          port: 80
